--- a/looks.css
+++ b/looks.css
@@ -1,19 +1,23 @@
-#gameBoundary {
-  border: 2px solid black;
-  width: 800px;
-  height: 600px;
-  margin: 4px;
-
+body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
-#gameCharacter {
-  border-radius: 50%;
-  border: 2px solid red;
-  width: 60px;
-  height: 60px;
+#gameBoundary td {
+  border: 1px solid black;
+  height: 16px;
+  width: 16px;
+  box-sizing: border-box;
+}
+
+#gameBoundary {
+  border: 4px solid black;
+  border-collapse: collapse;
+  width: 600px;
+  height: 600px;
+  margin: 4px
 }
 
 html, body {
