--- a/looks.css
+++ b/looks.css
@@ -9,10 +9,11 @@ body {
   height: 16px;
   width: 16px;
   box-sizing: border-box;
+
+  background-size: cover;
 }
 
 #gameBoundary {
-  border: 4px solid black;
   border-collapse: collapse;
   width: 600px;
   height: 600px;
